<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/list_background_pressed">

    <TextView
        android:id="@+id/tv_nome"
        android:textColor="#fff"
        android:paddingTop="30dp"
        android:paddingBottom="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/campo_nome" />

    <EditText
        android:id="@+id/ed_nome"
        android:background="@drawable/rounded_edit_text"
        android:layout_gravity="center_horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tv_email"
        android:textColor="#fff"
        android:paddingTop="30dp"
        android:paddingBottom="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/campo_email" />

    <EditText
        android:id="@+id/ed_email"
        android:background="@drawable/rounded_edit_text"
        android:layout_gravity="center_horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"/>
s
    <TextView
        android:id="@+id/tv_senha"
        android:textColor="#fff"
        android:paddingTop="30dp"
        android:paddingBottom="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/campo_senha" />

    <EditText
        android:id="@+id/ed_senha"
        android:background="@drawable/rounded_edit_text"
        android:layout_gravity="center_horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tv_confirmSenha"
        android:textColor="#fff"
        android:paddingTop="30dp"
        android:paddingBottom="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/campo_confirmSenha" />

    <EditText
        android:id="@+id/ed_confirmSenha"
        android:background="@drawable/rounded_edit_text"
        android:layout_gravity="center_horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/space"
        android:textColor="#fff"
        android:paddingTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_salvar"
        android:textColor="#fff"
        android:background="@drawable/rounded_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_salvar" />


</LinearLayout>